# Pydantic

./: main.py  pyproject.toml
