[tool.poetry]
name = "pydantic-learn"
version = "0.1.0"
description = ""
authors = ["b"]
readme = "README.md"
packages = [{include = "pydantic_learn"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
